--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
             <button type="submit">Send</button>
         </form>
     </main>
-
-
-
+    <script type="module" src="./js/app.js"></script>
 
 </body>
 
